# analiz

./: .env.example  .gitignore  CHANGELOG.md  README.md  plan.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py  service.py
app/domain/: __init__.py  enums.py  findings.py  result.py
app/evidence/: __init__.py  base.py  registry.py  types.py
app/extraction/: __init__.py  base.py  mock.py  truncation.py  visiumgo.py
app/llm/: __init__.py  mock.py  openai_compatible.py  provider.py
app/parsing/: __init__.py  json_parser.py
app/persistence/: __init__.py  file_repository.py  repository.py
app/precheck/: __init__.py  base.py  noop.py
app/prompting/: __init__.py  builder.py
app/source/: __init__.py  banks.py  base.py  mock.py  models.py  visiumgo.py
config/: banks.json  prompt_template.txt
tests/: conftest.py  test_api_smoke.py  test_contracts.py  test_evidence.py  test_extraction_mock.py  test_llm_mock.py  test_parsing.py  test_persistence.py  test_precheck.py  test_prompt_builder.py  test_resilience.py  test_truncation.py
